# FileRecoveryApp

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  FULL_SYSTEM_DESIGN.md  README.md  build.gradle.kts
app/: build.gradle.kts
src/main/: AndroidManifest.xml
src/main/cpp/: carver.cpp  native-lib.cpp  recovery-jni.cpp  recovery_core.cpp  signatures.cpp
src/main/cpp/include/: carver.h  file_signatures.h  recovery_core.h  signatures.h
src/main/java/com/recovery/filecarver/: BillingManager.kt  CarverEngine.kt  DataModels.kt  LogViewerActivity.kt  MainActivity.kt  PreviewActivity.kt  RecoveryEngine.kt  RecoveryLogger.kt  RecoveryViewModel.kt  StorageAccessManager.kt
src/main/res/layout/: activity_log_viewer.xml  activity_main.xml  activity_preview.xml
src/main/res/menu/: log_menu.xml
src/main/res/values/: strings.xml  themes.xml
